2005-02-02  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/compile: Likewise.

2005-02-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/elisp-comp: Use `(exit N); exit N', not `(exit N); exit';
	see 2004-12-17.
	* lib/mdate-sh, lib/py-compile, lib/ylwrap: Exit with nonzero
	status if a write failure occurs with --help or --version option,
	as below.

2005-02-02  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/depcomp: Exit with nonzero status if a write failure occurs
	with --help or --version option.
	* lib/elisp-comp: Likewise.
	* lib/gnupload: Likewise.
	* lib/install-sh: Likewise.
	* lib/missing: Likewise.
	* lib/mkinstalldirs: Likewise.

2005-02-01  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (aclocal options): Typo.

	* aclocal.in (list_compare): New functions.
	(scan_file): Honor #serial lines.
	* tests/acloca18.test: New test.
	* tests/Makefile.am (TESTS): Add it.
	* doc/automake.texi (aclocal options, Local Macros): Document
	#serial.

2005-01-30  Alexandre Duret-Lutz  <adl@gnu.org>

	Preliminary support for `aclocal --install'.
	This still lacks #serial support.
	* aclocal.in (reset_maps, install_file): New functions.
	(write_aclocal): Copy files if --install.
	(usage, parse_arguments): Recognize --install.
	("MAIN"): Start aclocal again if some file were installed.
	* tests/acloca10.test: Augment to test --install.
	* tests/aclocal.in, tests/defs.in: Add support for
	ACLOCAL_TESTSUITE_FLAGS, used by acloca10.test.
	* doc/automake.texi (aclocal options, Local Macros): Document
	--install.
	(Future of aclocal): Adjust.

	* doc/automake.texi (Macro search path): Using --acdir is not
	obvious, it's erroneous.

	* doc/automake.texi (direntry): Let `info Automake' point to the
	manual, and `info automake' to the `Invoking automake' node.  Like
	in Autoconf.

2005-01-27  Akim Demaille  <akim@epita.fr>

	* lib/Automake/Configure_ac.pm: s/filename/file_name/g.
	From Paul Eggert.

2005-01-24  Akim Demaille  <akim@epita.fr>
