@@ -132,7 +132,7 @@ my $ac_require_rx = "AC_REQUIRE\\((?:\\[([^]]+)\\]|([^],)\n]+))\\)";
 my $m4_include_rx = "(?:m4_)?s?include\\((?:\\[([^]]+)\\]|([^],)\n]+))\\)";
 
 # Match a serial number
-my $serial_line_rx = '^#\s*serial\s*(.*?)\s*$';
+my $serial_line_rx = '^#\s*serial\s*(\S*)';
 my $serial_number_rx = '^\d+(?:\.\d+)*$';
 
 ################################################################
@@ -421,8 +421,8 @@ sub scan_file ($$$)
 	  if ($number !~ /$serial_number_rx/go)
 	    {
 	      msg ('syntax', "$file:$.",
-		   "malformed serial number `$number', "
-		   . "expecting only digits and dots");
+		   "warning: ill-formed serial number `$number', "
+		   . "expecting a version string with only digits and dots");
 	    }
 	  elsif ($defun_seen)
 	    {
