@@ -1,4 +1,4 @@
-@set UPDATED 1 February 2005
+@set UPDATED 6 February 2005
 @set UPDATED-MONTH February 2005
 @set EDITION 1.9a
 @set VERSION 1.9a
