@@ -1,3 +1,12 @@
+2005-02-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* aclocal.in ($serial_line_rx): Allow trailing garbage after the
+	serial number.
+	(scan_file): Explicitly mark the "ill-formed serial" message
+	as a warning.
+	* doc/automake.texi (aclocal options, Local Macros): Link to...
+	(Serials): ... this new section.
+
 2005-02-02  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* lib/compile: Likewise.
